@@ -215,6 +215,8 @@ int e_load_group(const char *executable, e_epiphany_t *dev, unsigned row, unsign
 		}
 	}
 
+	ee_reset_group(dev, row, col, rows, cols);
+
 	clear_sram(dev, row, col, rows, cols);
 
 	for (irow=row; irow<(row+rows); irow++) {
